--- a/bbs/changelog.txt
+++ b/bbs/changelog.txt
@@ -1,5 +1,5 @@
 0.10
-The Space Update: Part 1
+0.10: The Space Update - Part 1
 - The 2024 Time Vortex, made of clouds with lightning effects.
 - Add air bubble around the TARDIS in space.
 - Muffle down sound in space.
