--- a/bbs/changelog.txt
+++ b/bbs/changelog.txt
@@ -1,6 +1,12 @@
-0.10.7
+0.10.8
 
-<b>0.10.7: The Space Update - Part 1</b>
+<b>0.10.8</b>
+- Fixed a camera glitch after exiting the Time Vortex.
+- Fixed footsteps sounds playing in space.
+- Fixed glitchy reflections at very high speeds on planet surfaces.
+- Fixed the Space Throttle being always visible.
+
+<b>0.10.7</b>
 - Added Audio Mixer in Settings.
 - Unified the ingame Settings menu with the start menu.
 - Updated start menu background with a new 3D milky way and more galaxies in the background.
