--- a/bbs/changelog.txt
+++ b/bbs/changelog.txt
@@ -1,4 +1,10 @@
-0.10.8
+0.10.9
+
+<b>0.10.9</b>
+- New Cardiff scene
+- Drivable cars
+- Unlock cars with your sonic screwdriver
+- Lots of optimizations and bug fixes
 
 <b>0.10.8</b>
 - Fixed a camera glitch after exiting the Time Vortex.
