--- a/bbs/changelog.txt
+++ b/bbs/changelog.txt
@@ -1,3 +1,5 @@
+Important Notice: We are aware that Google Maps doesn't work. Please refrain from leaving a bad review because of that. We had to cancel the service because the Google Maps API became extremely expensive. We are working hard on a solution.
+
 0.10.12
 
 <b>0.10.12</b>
