--- a/bbs/changelog.txt
+++ b/bbs/changelog.txt
@@ -1,5 +1,9 @@
 0.11.1
 
+<b>Important notice:</b> If you alrady got your API key for Google Maps Tiles API and it doesn't work, please make sure you have the Map Tiles API enabled, since it doesn't get enabled by default.
+
+Follow this guide: <a href>https://support.google.com/googleapi/answer/6158841?hl=en</a>
+
 <b>Version 0.11.1: The Relativity Update</b>
 
 - Time Dilation: The faster you travel (or the closer you get to a black hole), the faster you advance into the future.
