--- a/bbs/changelog.txt
+++ b/bbs/changelog.txt
@@ -2,7 +2,7 @@
 
 <b>Important notice:</b> If you alrady got your API key for Google Maps Tiles API and it doesn't work, please make sure you have the Map Tiles API enabled, since it doesn't get enabled by default.
 
-Follow this guide: <a href>https://support.google.com/googleapi/answer/6158841?hl=en</a>
+Follow this guide: <a href="https://support.google.com/googleapi/answer/6158841?hl=en">https://support.google.com/googleapi/answer/6158841?hl=en</a>
 
 <b>Version 0.11.1: The Relativity Update</b>
 
