--- a/bbs/changelog.txt
+++ b/bbs/changelog.txt
@@ -6,13 +6,13 @@ Follow this guide: <a href="https://support.google.com/googleapi/answer/6158841?
 
 <b>Important notice:</b>
 We’ve identified crashes on some devices caused by a Qualcomm graphics driver issue and Samsung’s aggressive battery management.
-✅ Recommended fix:
-If the game asks you to choose between Vulkan and OpenGL, we recommend selecting OpenGL (it’s more stable on Galaxy S24 for now).
-Update to the latest game version.
-Go to Settings → Apps → MyGame → Battery → Unrestricted
-Go to Settings → Battery → Background usage limits, turn off Put unused apps to sleep, and add MyGame to Apps that won’t be put to sleep
-Open the recent apps screen, tap the game’s icon, and select Keep open
-Make sure your S24 is up to date: Settings → Software update → Download and install
+<b>How to fix:</b>
+- If the game asks you to choose between Vulkan and OpenGL, we recommend selecting OpenGL (it’s more stable on Galaxy S24 for now).
+- Update to the latest game version.
+- Go to Settings → Apps → MyGame → Battery → Unrestricted
+- Go to Settings → Battery → Background usage limits, turn off Put unused apps to sleep, and add MyGame to Apps that won’t be put to sleep
+- Open the recent apps screen, tap the game’s icon, and select Keep open
+- Make sure your S24 is up to date: Settings → Software update → Download and install
 
 <b>Version 0.11.1: The Relativity Update</b>
 
